[API] Update CapabilitiesResponse.displayFields to be an array (#217)
